# parabolized-navier-stokes

./: .gitignore  CMakeLists.txt  Makefile  README.rst  requirements.in  requirements.txt  setup.py
CFD2/: AXIsolver.py  FreeStream.py  Grid.py  printer.ps
CFDexplorer/: BodyPlotter.py  CFDexplorer.py  CFDmenu.py  ColorList.py  EQNexplorer.py  EQNparser.py  Explorer.py  GridPlotter.py  InitialConditions.py  LinePlot.py  Scanner.py  XUIbuilder.py  XUIobjects.py  main.py  options.db
CFDexplorer/TestCases/: case1.cfd  window.xml
CFDexplorer/Tex/: AXIpde.tex  CFDequations.tex  explore.tex  pde.tex
CFDexplorer/html/: AXIsolver.html  Body.html  BodyPlotter.html  CFDexplorer.html  CFDmenu.html  ColorList.html  EQNexplorer.html  EQNparser.html  Explorer.html  GridPlotter.html  InitialConditions.html  LinePlot.html  (+4 more)
assets/: references.bib
book/: Untitled.ipynb  Untitled1.ipynb  Untitled2.ipynb  _config.yml  _toc.yml  air-properties.ipynb  auto-derivation.ipynb  euclidian_norm.f90  f2py-testing.ipynb  fortran-testing.ipynb  math-assistant.ipynb  navier-stokes-equations.ipynb  references.bib  running-fortran-code.ipynb  vortex-demo.ipynb
mod/: body.mod  init.mod  maccormack.mod  prtplot.mod  shared.mod  solver.mod
parabolized-navier-stokes/: _config.yml
pyrrbaxi/: pyrrbaxi.py
src/: driver.f90  driver.pyf  init.f90  maccormack.f90  main.f90  prtplot.f90  shared.f90  solve.f90
tex/: .deps  Makefile  main.aux  main.bbl  main.blg  main.dvi  main.fdb_latexmk  main.fls  main.out  main.tex  main.toc  nffs.sty  testeqn.aux  testeqn.sympy  testeqn.tex
tmp/: hello
(+164 files in other folders)
